--- a/404.html
+++ b/404.html
@@ -2,12 +2,15 @@
 <html lang="ko">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>홍대리 주식캘린더 : 전문가가 뽑은 뉴스, 쪽집게 종목으로 매매하자!</title>
-    <meta name="description" content="홍대리 주식캘린더 : 전문가가 뽑은 뉴스, 쪽집게 종목으로 매매하자!">
+    <title>홍대리 주식캘린더</title>
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://stockcal.vip" />
+    <meta property="og:site_name" content="홍대리 주식캘린더" />
+    <meta property="og:title" content="홍대리 주식캘린더" />
+    <meta property="og:description" content="회원가입 불필요/무료로 이용 가능한 주식 정보 공유 사이트, 실제 뉴스를 기반으로 한 정확한 정보 제공, 전문가의 분석을 통한 투자 전략 수립, 다양한 종목에 대한 분석과 예측 제공, 실시간 정보 업데이트를 통한 빠른 시장 대응" />
     <link rel="icon" type="image/png" href="./calendar.png" sizes="32x32">
     <link rel="apple-touch-icon" sizes="180x180" href="./calendar.png">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5809567310705589" crossorigin="anonymous"></script>
